q commit