@@ -11,23 +11,24 @@ import com.itextpdf.kernel.pdf.PdfWriter;
 import com.itextpdf.layout.Document;
 import com.itextpdf.layout.element.Image;
 import com.suttori.dao.*;
+import com.suttori.dto.ChapterDto;
 import com.suttori.entity.*;
-import com.suttori.entity.MangaDesu.MangaDataDesu;
-import com.suttori.entity.MangaDesu.NotificationChapterMapping;
-import com.suttori.entity.MangaDesu.NotificationEntity;
+import com.suttori.entity.MangaDex.Tag.TagData;
+import com.suttori.entity.MangaDex.Tag.TagResponse;
+import com.suttori.entity.NotificationChapterMapping;
+import com.suttori.entity.NotificationEntity;
 import com.suttori.entity.MangaDex.Chapter.*;
 import com.suttori.entity.MangaDex.Manga.*;
 import com.suttori.service.interfaces.MangaServiceInterface;
 import com.suttori.telegram.MangaDexApiFeignClient;
 import com.suttori.telegram.TelegramSender;
 import com.suttori.telegram.TelegraphApiFeignClient;
-import com.suttori.telegram.UploadMangaDexFeignClient;
+import com.suttori.util.MangaUtil;
 import com.suttori.util.Util;
 import com.vdurmont.emoji.EmojiParser;
 import feign.Response;
 import lombok.extern.slf4j.Slf4j;
 import net.bramp.ffmpeg.FFmpeg;
-import net.bramp.ffmpeg.FFmpegExecutor;
 import net.bramp.ffmpeg.FFprobe;
 import net.bramp.ffmpeg.builder.FFmpegBuilder;
 import net.bramp.ffmpeg.probe.FFmpegStream;
@@ -48,13 +49,11 @@ import org.telegram.telegrambots.meta.api.objects.inlinequery.InlineQuery;
 import org.telegram.telegrambots.meta.api.objects.inlinequery.inputmessagecontent.InputTextMessageContent;
 import org.telegram.telegrambots.meta.api.objects.inlinequery.result.InlineQueryResult;
 import org.telegram.telegrambots.meta.api.objects.inlinequery.result.InlineQueryResultArticle;
-import org.telegram.telegrambots.meta.api.objects.message.Message;
 import org.telegram.telegrambots.meta.api.objects.replykeyboard.InlineKeyboardMarkup;
 import org.telegram.telegrambots.meta.api.objects.replykeyboard.buttons.InlineKeyboardButton;
 import org.telegram.telegrambots.meta.api.objects.replykeyboard.buttons.InlineKeyboardRow;
 import org.telegram.telegraph.api.methods.CreatePage;
 import org.telegram.telegraph.api.objects.Node;
-import org.telegram.telegraph.api.objects.NodeElement;
 
 import java.io.File;
 import java.io.FileNotFoundException;
@@ -65,14 +64,12 @@ import java.nio.charset.StandardCharsets;
 import java.sql.Timestamp;
 import java.text.SimpleDateFormat;
 import java.util.*;
-import java.util.concurrent.ExecutionException;
-import java.util.concurrent.ExecutorService;
-import java.util.concurrent.Executors;
+import java.util.function.Function;
 import java.util.stream.Collectors;
 
 @Slf4j
 @Service
-public class MangaDexService implements MangaServiceInterface<MangaDataMangaDex, String> {
+public class MangaDexService implements MangaServiceInterface<MangaDataMangaDex> {
 
     @Value("${telegraphApiToken}")
     private String telegraphApiToken;
@@ -80,27 +77,29 @@ public class MangaDexService implements MangaServiceInterface<MangaDataMangaDex,
     private String telegraphAuthorName;
     @Value("${telegraphAuthorUrl}")
     private String telegraphAuthorUrl;
+    @Value("${mangaDex}")
+    private String mangaDex;
 
     private MangaDexApiFeignClient mangaDexApiFeignClient;
     private TelegraphApiFeignClient telegraphApiFeignClient;
 
     private TelegramSender telegramSender;
     private Util util;
+    private MangaUtil mangaUtil;
+    private SenderService senderService;
+
 
     private NotificationEntityRepository notificationEntityRepository;
     private UserRepository userRepository;
     private MangaRepository mangaRepository;
     private MangaChapterRepository mangaChapterRepository;
     private NotificationChapterMappingRepository notificationChapterMappingRepository;
-    private StatisticEntityRepository statisticEntityRepository;
-    private HistoryEntityRepository historyEntityRepository;
-    private MangaStatusParameterRepository mangaStatusParameterRepository;
     private ReadStatusRepository readStatusRepository;
+    private UserFilterPreferencesRepository userFilterPreferencesRepository;
 
-    private ExecutorService executorService = Executors.newFixedThreadPool(10);
 
     @Autowired
-    public MangaDexService(MangaDexApiFeignClient mangaDexApiFeignClient, TelegramSender telegramSender, Util util, NotificationEntityRepository notificationEntityRepository, UserRepository userRepository, MangaRepository mangaRepository, MangaChapterRepository mangaChapterRepository, NotificationChapterMappingRepository notificationChapterMappingRepository, StatisticEntityRepository statisticEntityRepository, HistoryEntityRepository historyEntityRepository, MangaStatusParameterRepository mangaStatusParameterRepository, ReadStatusRepository readStatusRepository, TelegraphApiFeignClient telegraphApiFeignClient) {
+    public MangaDexService(MangaDexApiFeignClient mangaDexApiFeignClient, TelegramSender telegramSender, Util util, NotificationEntityRepository notificationEntityRepository, UserRepository userRepository, MangaRepository mangaRepository, MangaChapterRepository mangaChapterRepository, NotificationChapterMappingRepository notificationChapterMappingRepository, ReadStatusRepository readStatusRepository, TelegraphApiFeignClient telegraphApiFeignClient, MangaUtil mangaUtil, SenderService senderService, UserFilterPreferencesRepository userFilterPreferencesRepository) {
         this.mangaDexApiFeignClient = mangaDexApiFeignClient;
         this.telegramSender = telegramSender;
         this.util = util;
@@ -109,15 +108,15 @@ public class MangaDexService implements MangaServiceInterface<MangaDataMangaDex,
         this.mangaRepository = mangaRepository;
         this.mangaChapterRepository = mangaChapterRepository;
         this.notificationChapterMappingRepository = notificationChapterMappingRepository;
-        this.statisticEntityRepository = statisticEntityRepository;
-        this.historyEntityRepository = historyEntityRepository;
-        this.mangaStatusParameterRepository = mangaStatusParameterRepository;
         this.readStatusRepository = readStatusRepository;
         this.telegraphApiFeignClient = telegraphApiFeignClient;
+        this.mangaUtil = mangaUtil;
+        this.senderService = senderService;
+        this.userFilterPreferencesRepository = userFilterPreferencesRepository;
     }
 
     @Override
-    public void getSearchResult(InlineQuery inlineQuery) {
+    public void getSearchResult(InlineQuery inlineQuery, User user) {
         try {
             String languageCodeForCatalog = userRepository.findByUserId(inlineQuery.getFrom().getId()).getLanguageCodeForCatalog();
             int offset = !inlineQuery.getOffset().isEmpty() ? Integer.parseInt(inlineQuery.getOffset()) : 30;
@@ -126,26 +125,25 @@ public class MangaDexService implements MangaServiceInterface<MangaDataMangaDex,
             Response response = mangaDexApiFeignClient.searchMangaIncludesCoverArt(getSearchParams(inlineQuery, offset, languageCodeForCatalog));
             String jsonResponse = new String(response.body().asInputStream().readAllBytes(), StandardCharsets.UTF_8);
             MangaListResponse mangaResponse = objectMapper.readValue(jsonResponse, MangaListResponse.class);
-
             if (mangaResponse.getResponse() == null) {
                 return;
             }
+
             List<InlineQueryResult> inlineQueryResultList = new ArrayList<>();
             int i = 0;
             for (MangaDataMangaDex mangaData : mangaResponse.getData()) {
                 MangaAttributes attributes = mangaData.getAttributes();
-                StringBuilder stringBuilder = new StringBuilder();
-                stringBuilder.append(getYear(attributes.getYear()));
-                stringBuilder.append(" | Формат: ").append(getFormat(attributes.getTags(), languageCodeForCatalog)).append("\n");
-                stringBuilder.append("Статус: ").append(attributes.getStatus()).append("\n");
-                stringBuilder.append("Жанр: ").append(getGenres(attributes.getTags(), languageCodeForCatalog));
+                String text = getYear(attributes.getYear()) +
+                        " | Формат: " + getFormat(attributes.getTags(), languageCodeForCatalog) + "\n" +
+                        "Статус: " + attributes.getStatus() + "\n" +
+                        "Жанр: " + getGenres(attributes.getTags(), languageCodeForCatalog);
 
                 inlineQueryResultList.add(InlineQueryResultArticle.builder()
                         .id(inlineQuery.getFrom().getId() + "" + i++)
                         .title(getTitle(attributes.getTitle(), languageCodeForCatalog))
-                        .description(stringBuilder.toString())
+                        .description(text)
                         .thumbnailUrl(getCoverMangaDex(mangaData.getRelationships(), mangaData.getId(), "256"))
-                        .inputMessageContent(new InputTextMessageContent("mangadex.org\nmangaId\n" + mangaData.getId())).build());
+                        .inputMessageContent(new InputTextMessageContent(mangaDex + "\nmangaId\n" + mangaData.getId())).build());
             }
 
             telegramSender.sendAnswerInlineQuery(AnswerInlineQuery.builder()
@@ -154,76 +152,139 @@ public class MangaDexService implements MangaServiceInterface<MangaDataMangaDex,
                     .cacheTime(1)
                     .isPersonal(true)
                     .inlineQueryId(inlineQuery.getId()).build());
-
-        } catch (IOException e) {
+        } catch (Exception e) {
             e.printStackTrace();
         }
     }
 
-    public Map<String, List<String>> getSearchParams(InlineQuery inlineQuery, int offset, String languageCodeForCatalog) {
+    private Map<String, List<String>> getSearchParams(InlineQuery inlineQuery, int offset, String languageCodeForCatalog) {
         Map<String, List<String>> searchParams = new HashMap<>();
-        if (inlineQuery.getQuery().equals("last updated")) {
-            searchParams.put("order[latestUploadedChapter]", List.of("desc"));
-        } else {
-            searchParams.put("order[rating]", List.of("desc"));
-            searchParams.put("title", Collections.singletonList(inlineQuery.getQuery()));
+        Map<String, List<String>> filterPreferences = getUserFilterPreferences(inlineQuery.getFrom().getId(), mangaDex);
+
+
+        UserSortPreferences userSortPreferences = mangaUtil.getUserSortPreferences(inlineQuery.getFrom().getId(), mangaDex);
+        if (userSortPreferences != null) {
+            searchParams.put(userSortPreferences.getSortName(), List.of(userSortPreferences.getSortType()));
         }
+
+
+        if (filterPreferences != null) {
+            for (Map.Entry<String, List<String>> filterPreference : filterPreferences.entrySet()) {
+                if (filterPreference.getKey().equals("includedTags[]")) {
+                    searchParams.put("includedTags[]", getTagsId(filterPreference.getValue()));
+                } else {
+                    searchParams.put(filterPreference.getKey(), filterPreference.getValue());
+                }
+            }
+        }
+
+        searchParams.put("title", Collections.singletonList(inlineQuery.getQuery()));
+
         searchParams.put("limit", List.of("30"));
         searchParams.put("offset", List.of(String.valueOf(offset - 30)));
-        searchParams.put("contentRating[]", List.of("safe", "suggestive", "erotica", "pornographic"));
+        //searchParams.put("contentRating[]", List.of("safe", "suggestive", "erotica", "pornographic"));
         searchParams.put("availableTranslatedLanguage[]", List.of(languageCodeForCatalog));
         searchParams.put("hasAvailableChapters", Collections.singletonList("true"));
         return searchParams;
     }
 
+    private Map<String, List<String>> getUserFilterPreferences(Long userId, String catalogName) {
+        List<UserFilterPreference> filterPreferenceList = userFilterPreferencesRepository.findAllByUserIdAndCatalogName(userId, catalogName);
+        if (!filterPreferenceList.isEmpty()) {
+            return filterPreferenceList.stream()
+                    .collect(Collectors.groupingBy(
+                            UserFilterPreference::getFilterTag,
+                            Collectors.mapping(UserFilterPreference::getFilterValue, Collectors.toList())
+                    ));
+        } else {
+            return Collections.emptyMap();
+        }
+    }
+
+    private List<String> getTagsId(List<String> includedTagNames) {
+        try {
+            Response response = mangaDexApiFeignClient.getTagsId();
+            ObjectMapper mapper = new ObjectMapper();
+            String jsonResponse = new String(response.body().asInputStream().readAllBytes(), StandardCharsets.UTF_8);
+
+            TagResponse mangaResponse = mapper.readValue(jsonResponse, TagResponse.class);
+
+            return mangaResponse.getData().stream()
+                    .filter(tagData -> {
+                        String tagName = tagData.getAttributes().getName().get("en");
+                        return includedTagNames.contains(tagName);
+                    })
+                    .map(TagData::getId)
+                    .collect(Collectors.toList());
+        } catch (IOException e) {
+            throw new RuntimeException(e);
+        }
+    }
+
+
     @Override
     public void sendMangaById(Long userId, String mangaId) {
         String languageCode = userRepository.findByUserId(userId).getLanguageCodeForCatalog();
-        Manga manga = mangaRepository.findByMangaIdAndCatalogNameAndLanguageCode(mangaId, "mangadex.org", languageCode);
+        Manga manga = mangaRepository.findByMangaIdAndCatalogNameAndLanguageCode(mangaId, mangaDex, languageCode);
+        MangaDataMangaDex mangaData = getMangaData(mangaId);
 
         if (manga == null) {
-            MangaDataMangaDex mangaData = getMangaData(mangaId);
             manga = saveManga(mangaData, languageCode);
             String coverFileId = util.getPhotoFieldId(telegramSender.sendPhoto(SendPhoto.builder()
-                    .photo(new InputFile(getCoverMangaDex(mangaData.getRelationships(), mangaData.getId(), "512")))
+                    .photo(new InputFile(manga.getCoverUrl()))
                     .chatId(userId)
                     .parseMode("HTML")
-                    .replyMarkup(getMangaButtons(userId, mangaId, manga.getId(), manga.getLanguageCode()))
+                    .replyMarkup(getMangaButtons(new MangaButtonData(userId, mangaId, manga.getId(), manga.getLanguageCode())))
                     .caption(getMangaText(manga)).build()));
-            mangaRepository.setCoverFileId(coverFileId, mangaId, "mangadex.org");
+            mangaRepository.setCoverFileId(coverFileId, manga.getId());
         } else {
-            telegramSender.sendPhoto(SendPhoto.builder()
-                    .photo(new InputFile(manga.getCoverFileId()))
+            String coverFileId = util.getPhotoFieldId(telegramSender.sendPhoto(SendPhoto.builder()
+                    .photo(new InputFile(manga.getCoverFileId() != null ? manga.getCoverFileId() : manga.getCoverUrl()))
                     .chatId(userId)
                     .parseMode("HTML")
-                    .replyMarkup(getMangaButtons(userId, mangaId, manga.getId(), manga.getLanguageCode()))
-                    .caption(getMangaText(manga)).build());
+                    .replyMarkup(getMangaButtons(new MangaButtonData(userId, mangaId, manga.getId(), manga.getLanguageCode())))
+                    .caption(getMangaText(manga)).build()));
+            if (manga.getCoverFileId() == null) {
+                mangaRepository.setCoverFileId(coverFileId, manga.getId());
+            }
+
+            if (manga.getCoverUrl() == null) {
+                mangaRepository.setCoverUrl(getCoverMangaDex(mangaData.getRelationships(), mangaData.getId(), "512"), manga.getId());
+            }
         }
     }
 
     @Override
-    public InlineKeyboardMarkup getMangaButtons(Long userId, String mangaId) {
-        return null;
+    public void sendMangaById(Long userId, String mangaId, String languageCode) {
+        Manga manga = mangaRepository.findByMangaIdAndCatalogNameAndLanguageCode(mangaId, mangaDex, languageCode);
+        MangaDataMangaDex mangaData = getMangaData(mangaId);
+
+        if (manga == null) {
+            manga = saveManga(mangaData, languageCode);
+            String coverFileId = util.getPhotoFieldId(telegramSender.sendPhoto(SendPhoto.builder()
+                    .photo(new InputFile(manga.getCoverUrl()))
+                    .chatId(userId)
+                    .parseMode("HTML")
+                    .replyMarkup(getMangaButtons(new MangaButtonData(userId, mangaId, manga.getId(), manga.getLanguageCode())))
+                    .caption(getMangaText(manga)).build()));
+            mangaRepository.setCoverFileId(coverFileId, manga.getId());
+        } else {
+            String coverFileId = util.getPhotoFieldId(telegramSender.sendPhoto(SendPhoto.builder()
+                    .photo(new InputFile(manga.getCoverUrl()))
+                    .chatId(userId)
+                    .parseMode("HTML")
+                    .replyMarkup(getMangaButtons(new MangaButtonData(userId, mangaId, manga.getId(), manga.getLanguageCode())))
+                    .caption(getMangaText(manga)).build()));
+            if (manga.getCoverFileId() == null) {
+                mangaRepository.setCoverFileId(coverFileId, manga.getId());
+            }
+            if (manga.getCoverUrl() == null) {
+                mangaRepository.setCoverUrl(getCoverMangaDex(mangaData.getRelationships(), mangaData.getId(), "512"), manga.getId());
+            }
+        }
     }
 
-    public Manga saveManga(MangaDataMangaDex mangaData, String languageCode) {
-        return mangaRepository.save(new Manga(null, null, mangaData.getId(), "mangadex.org",
-                getTitle(mangaData.getAttributes().getTitle(), languageCode), mangaData.getType(), mangaData.getAttributes().getStatus(),
-                getGenres(mangaData.getAttributes().getTags(), languageCode), getDescription(mangaData.getAttributes().getDescription(), languageCode),
-                mangaData.getAttributes().getYear(), null, 0, getFormat(mangaData.getAttributes().getTags(), languageCode), languageCode));
-    }
-
-    public InlineKeyboardMarkup getMangaButtons(Long userId, String mangaId, Long mangaDatabaseId, String languageCode) {
-        String whiteCheckMark = notificationEntityRepository.findByMangaIdAndUserId(mangaId, userId) != null ? " :white_check_mark:" : "";
-        return new InlineKeyboardMarkup(new ArrayList<>(List.of(
-                new InlineKeyboardRow(InlineKeyboardButton.builder().text(EmojiParser.parseToUnicode("В закладки")).callbackData("mangadex.org" + "\nchangeStatus\n" + mangaDatabaseId + "\n" + languageCode).build(),
-                        InlineKeyboardButton.builder().text(EmojiParser.parseToUnicode("Уведомления" + whiteCheckMark)).callbackData("mangadex.org" + "\nnotification\n" + mangaDatabaseId + "\n" + languageCode).build()),
-                new InlineKeyboardRow(InlineKeyboardButton.builder().text(EmojiParser.parseToUnicode("Перейти к чтению")).switchInlineQueryCurrentChat("mangadex.org" + "\nmangaId:\n" + mangaId + "\n" + languageCode).build())
-        )));
-    }
-
-    @Override
-    public MangaDataMangaDex getMangaData(String mangaId) {
+    private MangaDataMangaDex getMangaData(String mangaId) {
         try {
             ObjectMapper objectMapper = new ObjectMapper();
             Response response = mangaDexApiFeignClient.getMangaById(mangaId);
@@ -231,20 +292,52 @@ public class MangaDexService implements MangaServiceInterface<MangaDataMangaDex,
             MangaResponse mangaResponse = objectMapper.readValue(jsonResponse, MangaResponse.class);
             return mangaResponse.getData();
         } catch (IOException e) {
-            throw new RuntimeException(e);
+            e.printStackTrace();
+            return null;
         }
     }
 
-    public String getMangaText(Manga manga) {
+    private Manga saveManga(MangaDataMangaDex mangaData, String languageCode) {
+        return mangaRepository.save(new Manga(getCoverMangaDex(mangaData.getRelationships(), mangaData.getId(), "512"), mangaData.getId(), mangaDex,
+                getTitle(mangaData.getAttributes().getTitle(), languageCode), mangaData.getType(), mangaData.getAttributes().getStatus(),
+                getGenres(mangaData.getAttributes().getTags(), languageCode), getDescription(mangaData.getAttributes().getDescription(), languageCode),
+                String.valueOf(mangaData.getAttributes().getYear()), null, null, getFormat(mangaData.getAttributes().getTags(), languageCode), languageCode));
+    }
+
+    @Override
+    public void sendMangaByDatabaseId(Long userId, String mangaDatabaseId) {
+        Manga manga = mangaRepository.findById(Long.valueOf(mangaDatabaseId)).orElseThrow();
+        String coverFileId = util.getPhotoFieldId(telegramSender.sendPhoto(SendPhoto.builder()
+                .photo(new InputFile(manga.getCoverUrl()))
+                .chatId(userId)
+                .parseMode("HTML")
+                .replyMarkup(getMangaButtons(new MangaButtonData(userId, manga.getMangaId(), manga.getId(), manga.getLanguageCode())))
+                .caption(getMangaText(manga)).build()));
+        if (manga.getCoverFileId() == null) {
+            mangaRepository.setCoverFileId(coverFileId, manga.getId());
+        }
+    }
+
+    @Override
+    public InlineKeyboardMarkup getMangaButtons(MangaButtonData mangaButtonData) {
+        String whiteCheckMark = notificationEntityRepository.findByMangaIdAndUserId(mangaButtonData.getMangaId(), mangaButtonData.getUserId()) != null ? " :white_check_mark:" : "";
+        return new InlineKeyboardMarkup(new ArrayList<>(List.of(
+                new InlineKeyboardRow(InlineKeyboardButton.builder().text(EmojiParser.parseToUnicode("В закладки")).callbackData(mangaDex + "\nchangeStatus\n" + mangaButtonData.getMangaDatabaseId() + "\n" + mangaButtonData.getLanguageCode()).build(),
+                        InlineKeyboardButton.builder().text(EmojiParser.parseToUnicode("Уведомления" + whiteCheckMark)).callbackData(mangaDex + "\nnotification\n" + mangaButtonData.getMangaDatabaseId() + "\n" + mangaButtonData.getLanguageCode()).build()),
+                new InlineKeyboardRow(InlineKeyboardButton.builder().text(EmojiParser.parseToUnicode("Перейти к чтению")).switchInlineQueryCurrentChat(mangaDex + "\nmangaId:\n" + mangaButtonData.getMangaId() + "\n" + mangaButtonData.getLanguageCode()).build())
+        )));
+    }
+
+    private String getMangaText(Manga manga) {
         StringBuilder stringBuilder = new StringBuilder();
         stringBuilder.append("<b>").append(manga.getName()).append("</b>").append("\n\n");
-        if (manga.getReleaseDate() != 0) {
+        if (!manga.getReleaseDate().equals("0")) {
             stringBuilder.append("<b>").append("Год выпуска: ").append("</b>").append(manga.getReleaseDate()).append("\n");
         }
         stringBuilder.append("<b>").append("Формат: ").append("</b>").append(manga.getFormat()).append("\n");
         stringBuilder.append("<b>").append("Статус: ").append("</b>").append(manga.getStatus()).append("\n");
         stringBuilder.append("<b>").append("Жанры: ").append("</b><i>").append(manga.getGenres()).append("</i>\n\n");
-        stringBuilder.append("<b>").append("Описание: ").append("</b>").append(manga.getDescription());
+        stringBuilder.append("<b>").append("Описание: ").append("</b>").append(manga.getDescription().replace("<", "").replace(">", ""));
 
         if (stringBuilder.length() > 1024) {
             stringBuilder = new StringBuilder(stringBuilder.substring(0, 1024));
@@ -254,18 +347,13 @@ public class MangaDexService implements MangaServiceInterface<MangaDataMangaDex,
     }
 
     @Override
-    public String getMangaText(MangaDataMangaDex mangaData) {
-        return null;
-    }
-
-    @Override
     public void clickNotification(CallbackQuery callbackQuery) {
         Long mangaDatabaseId = Long.valueOf(util.parseValue(callbackQuery.getData())[2]);
         String languageCode = util.parseValue(callbackQuery.getData())[3];
         String mangaId = mangaRepository.findById(mangaDatabaseId).get().getMangaId();
-
         Long userId = callbackQuery.getFrom().getId();
-        NotificationEntity notificationEntity = notificationEntityRepository.findByMangaIdAndUserId(mangaId, userId);
+
+        NotificationEntity notificationEntity = notificationEntityRepository.findByMangaDatabaseIdAndUserId(mangaDatabaseId, userId);
         if (notificationEntity != null) {
             notificationEntityRepository.delete(notificationEntity);
         } else {
@@ -274,13 +362,10 @@ public class MangaDexService implements MangaServiceInterface<MangaDataMangaDex,
                 util.sendErrorMessage("Возникла ошибка при получении глав, обратись в поддержку", userId);
                 return;
             }
-            notificationEntityRepository.save(new NotificationEntity(mangaId, mangaDatabaseId, callbackQuery.getFrom().getId(), "mangadex.org"));
-            NotificationChapterMapping chapterMapping = notificationChapterMappingRepository.findByMangaId(mangaId);
-            if (chapterMapping == null) {
-                notificationChapterMappingRepository.save(new NotificationChapterMapping(mangaId, (chapters.size() + 1) + "", "mangadex.org"));
-            } else {
-                chapterMapping.setChapter((chapters.size() + 1) + "");
-                notificationChapterMappingRepository.save(chapterMapping);
+            String lastChapter = util.parseValue(chapters.get(0).getKey())[1];
+            notificationEntityRepository.save(new NotificationEntity(mangaId, mangaDatabaseId, callbackQuery.getFrom().getId(), mangaDex));
+            if (notificationChapterMappingRepository.findByMangaDatabaseId(mangaDatabaseId) == null) {
+                notificationChapterMappingRepository.save(new NotificationChapterMapping(mangaId, mangaDatabaseId, lastChapter, mangaDex));
             }
             telegramSender.sendAnswerCallbackQuery(AnswerCallbackQuery.builder()
                     .callbackQueryId(callbackQuery.getId())
@@ -288,14 +373,9 @@ public class MangaDexService implements MangaServiceInterface<MangaDataMangaDex,
                     .showAlert(true).build());
         }
         telegramSender.sendEditMessageReplyMarkup(EditMessageReplyMarkup.builder()
-                .replyMarkup(getMangaButtons(userId, mangaId, mangaDatabaseId, languageCode))
+                .replyMarkup(getMangaButtons(new MangaButtonData(userId, mangaId, mangaDatabaseId, languageCode)))
                 .chatId(userId)
                 .messageId(callbackQuery.getMessage().getMessageId()).build());
-    }
-
-    @Override
-    public List<?> getChaptersFromSource(String mangaId) {
-        return null;
     }
 
     @Override
@@ -303,109 +383,216 @@ public class MangaDexService implements MangaServiceInterface<MangaDataMangaDex,
         User user = userRepository.findByUserId(inlineQuery.getFrom().getId());
         String mangaId = util.parseValue(inlineQuery.getQuery())[2];
         String languageCode = util.parseValue(inlineQuery.getQuery())[3];
-        Manga manga = mangaRepository.findByMangaIdAndCatalogNameAndLanguageCode(mangaId, "mangadex.org", languageCode);
+        Manga manga = mangaRepository.findByMangaIdAndCatalogNameAndLanguageCode(mangaId, mangaDex, languageCode);
+
         List<Map.Entry<String, String>> volChList = getChaptersFromSource(mangaId, languageCode);
         if (volChList == null) {
             util.sendErrorMessage("Возникла ошибка при получении глав, обратись в поддержку", user.getUserId());
             return;
         }
         List<Chapter> sortedChapters = saveChapters(volChList, manga);
-
-        int offset = 0;
-        if (!inlineQuery.getOffset().isEmpty()) {
-            offset = Integer.parseInt(inlineQuery.getOffset());
-        }
-        List<InlineQueryResult> inlineQueryResultList = new ArrayList<>();
-
-        int limit = offset + 49;
-        if (limit > sortedChapters.size()) {
-            limit = sortedChapters.size();
-        }
-
-        if (user.getSortParam() == null || user.getSortParam().equals("sortDESC")) {
-            Collections.reverse(sortedChapters);
-        }
-
-        if (offset == 0) {
-            if (user.getSortParam() == null || user.getSortParam().equals("sortASC")) {
-                inlineQueryResultList.add(InlineQueryResultArticle.builder()
-                        .id(inlineQuery.getFrom().getId() + "0")
-                        .title(EmojiParser.parseToUnicode("Отсортировать с конца"))
-                        .description("Нажми чтобы отсортировать главы от последней к первой")
-                        .thumbnailUrl("https://gorillastorage.s3.eu-north-1.amazonaws.com/MangaReaderBot/free-icon-sort-1102420.png")
-                        .inputMessageContent(new InputTextMessageContent("sortDESC")).build());
-            } else {
-                inlineQueryResultList.add(InlineQueryResultArticle.builder()
-                        .id(inlineQuery.getFrom().getId() + "0")
-                        .title(EmojiParser.parseToUnicode("Отсортировать с начала"))
-                        .description("Нажми чтобы отсортировать главы от первой к последней")
-                        .thumbnailUrl("https://gorillastorage.s3.eu-north-1.amazonaws.com/MangaReaderBot/free-icon-sort-1102420.png")
-                        .inputMessageContent(new InputTextMessageContent("sortASC")).build());
-            }
-        }
-
-        int i = 1;
-        String downloadStatus;
-        String readStatus;
-        for (int j = offset; j < limit; j++) {
-            if (sortedChapters.get(j).getStatus() != null && sortedChapters.get(j).getStatus().equals("finished")) {
-                downloadStatus = "✔️ Загружена";
-            } else {
-                downloadStatus = "Не загружена";
-            }
-
-            if (readStatusRepository.findByMangaIdAndChapterIdAndUserIdAndCatalogName(sortedChapters.get(j).getMangaId(), sortedChapters.get(j).getChapterId(), user.getUserId(), "mangadex.org") != null) {
-                readStatus = "✔️ Прочитана";
-            } else {
-                readStatus = "Не прочитана";
-            }
-
-            inlineQueryResultList.add(InlineQueryResultArticle.builder()
-                    .id(inlineQuery.getFrom().getId() + "" + i++)
-                    .title("Том " + sortedChapters.get(j).getVol() + ". Глава " + sortedChapters.get(j).getChapter())
-                    .description(downloadStatus + "\n" + readStatus)
-                    .thumbnailUrl("https://gorillastorage.s3.eu-north-1.amazonaws.com/MangaReaderBot/hand-drawn-vintage-comic-illustration_23-2149624608.jpg")
-                    .inputMessageContent(new InputTextMessageContent(util.getSourceName(inlineQuery.getQuery()) + "\nchapterId\n" + volChList.get(j).getValue())).build());
-        }
-        telegramSender.sendAnswerInlineQuery(AnswerInlineQuery.builder()
-                .results(inlineQueryResultList)
-                .nextOffset(String.valueOf(limit))
-                .cacheTime(1)
-                .isPersonal(true)
-                .inlineQueryId(inlineQuery.getId()).build());
+        mangaUtil.createAnswerInlineQueryButtons(inlineQuery, sortedChapters, user);
     }
 
-    public List<Chapter> saveChapters(List<Map.Entry<String, String>> volChList, Manga manga) {
-        List<Chapter> chapterList = mangaChapterRepository.findAllByMangaIdAndCatalogNameAndLanguageCode(manga.getMangaId(), "mangadex.org", manga.getLanguageCode());
-        Map<String, Chapter> chapterMap = chapterList.stream()
-                .collect(Collectors.toMap(Chapter::getChapterId, chapter -> chapter));
+    private List<Map.Entry<String, String>> getChaptersFromSource(String mangaId, String languageCode) {
+        try {
+            Map<String, List<String>> params = new HashMap<>();
+            params.put("translatedLanguage[]", List.of(languageCode));
+            Response response = mangaDexApiFeignClient.getChapterListAggregate(mangaId, params);
+            if (response.status() != 200) {
+                return null;
+            }
+            String jsonResponse = new String(response.body().asInputStream().readAllBytes(), StandardCharsets.UTF_8);
+            ChapterListAggregate chapterListAggregate = new ObjectMapper().readValue(jsonResponse, ChapterListAggregate.class);
+            Map<String, String> volChMap = new LinkedHashMap<>();
+            for (Volume volume : chapterListAggregate.getVolumes().values()) {
+                for (ChapterMangaDex chapterMangaDex : volume.getChapters().values()) {
+                    volChMap.put(volume.getVolume() + "\n" + chapterMangaDex.getChapter(), chapterMangaDex.getId());
+                }
+            }
+            return new ArrayList<>(volChMap.entrySet());
+        } catch (Exception e) {
+            e.printStackTrace();
+            return null;
+        }
+    }
+
+//    private List<Chapter> saveChapters(List<Map.Entry<String, String>> volChList, Manga manga) {
+//        List<Chapter> chapterList = mangaChapterRepository.findAllByMangaIdAndCatalogNameAndLanguageCode(manga.getMangaId(), mangaDex, manga.getLanguageCode());
+//        Map<String, Chapter> chapterMap = chapterList.stream()
+//                .collect(Collectors.toMap(Chapter::getChapterId, chapter -> chapter));
+//        Collections.reverse(volChList);
+//
+//        if (chapterList.isEmpty()) {
+//            for (Map.Entry<String, String> stringEntry : volChList) {
+//                Chapter chapter = getNewChapter(manga, stringEntry);
+//                chapter.setType(manga.getType());
+//                chapterList.add(chapter);
+//            }
+//
+//            for (int i = 0; i < volChList.size(); i++) {
+//                Chapter currentChapter = chapterList.get(i);
+//                Chapter prevChapter = (i > 0) ? chapterList.get(i - 1) : null;
+//                Chapter nextChapter = (i < chapterList.size() - 1) ? chapterList.get(i + 1) : null;
+//                currentChapter.setPrevChapter(prevChapter);
+//                currentChapter.setNextChapter(nextChapter);
+////                try {
+////                    chapterList.get(i).setPrevChapter(chapterList.get(i - 1));
+////                } catch (IndexOutOfBoundsException e) {
+////                    chapterList.get(i).setPrevChapter(null);
+////                }
+////
+////                try {
+////                    chapterList.get(i).setNextChapter(chapterList.get(i + 1));
+////                } catch (IndexOutOfBoundsException e) {
+////                    chapterList.get(i).setNextChapter(null);
+////                }
+//            }
+//            mangaChapterRepository.saveAll(chapterList);
+//        } else {
+//            for (int i = 0; i < volChList.size(); i++) {
+//                if (!chapterMap.containsKey(volChList.get(i).getValue())
+//                        || chapterMap.get(volChList.get(i).getValue()).getNextChapter() == null
+//                        || chapterMap.get(volChList.get(i).getValue()).getPrevChapter() == null) {
+//                    Chapter currentChapter = mangaChapterRepository.findByChapterId(volChList.get(i).getValue());
+//                    if (currentChapter == null) {
+//                        currentChapter = getNewChapter(manga, volChList.get(i));
+//                        mangaChapterRepository.save(currentChapter);
+//                    }
+//
+//                    if (i != 0 && (currentChapter.getPrevChapter() == null || !currentChapter.getPrevChapter().getChapterId().equals(volChList.get(i - 1).getValue()))) {
+//                        mangaChapterRepository.setPrevChapter(volChList.get(i - 1).getValue(), currentChapter.getId());
+//                        try {
+//                            mangaChapterRepository.setNextChapterByChapterId(currentChapter.getChapterId(), volChList.get(i - 1).getValue());
+//                        } catch (IndexOutOfBoundsException e) {
+//                            log.warn("Next Chapter not found");
+//                        }
+//                    }
+//                    if (i != volChList.size() - 1 && (currentChapter.getNextChapter() == null || !currentChapter.getNextChapter().getChapterId().equals(volChList.get(i + 1).getValue()))) {
+//                        Chapter nextChapter = mangaChapterRepository.findByChapterId(volChList.get(i + 1).getValue());
+//                        if (nextChapter == null) {
+//                            nextChapter = getNewChapter(manga, volChList.get(i + 1));
+//                        }
+//                        nextChapter.setChapterId(volChList.get(i + 1).getValue());
+//                        try {
+//                            nextChapter.setNextChapter(mangaChapterRepository.findByChapterId(volChList.get(i + 2).getValue()));
+//                        } catch (IndexOutOfBoundsException e) {
+//                            nextChapter.setNextChapter(null);
+//                        }
+//                        nextChapter.setPrevChapter(currentChapter);
+//                        mangaChapterRepository.save(nextChapter);
+//                        mangaChapterRepository.setNextChapter(nextChapter.getChapterId(), currentChapter.getId());
+//
+//                        try {
+//                            mangaChapterRepository.setPrevChapterByChapterId(nextChapter.getChapterId(), volChList.get(i + 2).getValue());
+//                        } catch (IndexOutOfBoundsException e) {
+//                            log.warn("Prev Chapter not found");
+//                        }
+//                    }
+//                }
+//
+//            }
+//        }
+//        return mangaChapterRepository.getChaptersInOrderWithLanguageCode(manga.getMangaId(), mangaDex, manga.getLanguageCode());
+//    }
+
+
+    private List<Chapter> saveChapters(List<Map.Entry<String, String>> volChList, Manga manga) {
+        List<ChapterDto> chapterDtoList = mangaChapterRepository.findAllByMangaIdAndCatalogNameAndLanguageCode(manga.getMangaId(), mangaDex, manga.getLanguageCode());
+
+        Map<String, Chapter> chapterMap = chapterDtoList.stream()
+                .collect(Collectors.toMap(ChapterDto::getChapterId, chapterDto -> mangaUtil.convertToChapter(chapterDto)));
+
         Collections.reverse(volChList);
 
-        if (chapterList.isEmpty()) {
+        if (chapterDtoList.isEmpty()) {
+            List<Chapter> newChapters = new ArrayList<>();
+            List<Chapter> saveChapters = new ArrayList<>();
+
             for (Map.Entry<String, String> stringEntry : volChList) {
                 Chapter chapter = getNewChapter(manga, stringEntry);
                 chapter.setType(manga.getType());
-                chapterList.add(chapter);
+                newChapters.add(chapter);
             }
-
-            for (int i = 0; i < volChList.size(); i++) {
-                try {
-                    chapterList.get(i).setPrevChapter(chapterList.get(i - 1));
-                } catch (IndexOutOfBoundsException e) {
-                    chapterList.get(i).setPrevChapter(null);
-                }
-
-                try {
-                    chapterList.get(i).setNextChapter(chapterList.get(i + 1));
-                } catch (IndexOutOfBoundsException e) {
-                    chapterList.get(i).setNextChapter(null);
-                }
+            mangaChapterRepository.saveAll(newChapters);
+            for (int i = 0; i < newChapters.size(); i++) {
+                Chapter currentChapter = newChapters.get(i);
+                Chapter prevChapter = (i > 0) ? newChapters.get(i - 1) : null;
+                Chapter nextChapter = (i < newChapters.size() - 1) ? newChapters.get(i + 1) : null;
+                currentChapter.setPrevChapter(prevChapter);
+                currentChapter.setNextChapter(nextChapter);
+                saveChapters.add(currentChapter);
             }
-            mangaChapterRepository.saveAll(chapterList);
+            mangaChapterRepository.saveAllChapters(saveChapters);
         } else {
+//            for (ChapterDto dto : chapterDtoList) {
+//                if (dto.getNextChapterId() != null) {
+//                    Chapter nextChapter = chapterMap.get(dto.getNextChapterId());
+//                    chapterMap.get(dto.getChapterId()).setNextChapter(nextChapter);
+//                }
+//                if (dto.getPrevChapterId() != null) {
+//                    Chapter prevChapter = chapterMap.get(dto.getPrevChapterId());
+//                    chapterMap.get(dto.getChapterId()).setPrevChapter(prevChapter);
+//                }
+//            }
+//
+//            List<Chapter> chaptersToSave = new ArrayList<>();
+//
+//            for (int i = 0; i < volChList.size(); i++) {
+//                String chapterId = volChList.get(i).getValue();
+//
+//                if (!chapterMap.containsKey(chapterId) ||
+//                        chapterMap.get(chapterId).getNextChapter() == null ||
+//                        chapterMap.get(chapterId).getPrevChapter() == null) {
+//
+//                    Chapter currentChapter = chapterMap.getOrDefault(chapterId, getNewChapter(manga, volChList.get(i)));
+//                    chapterMap.putIfAbsent(chapterId, currentChapter);
+//
+//                    if (i != 0) {
+//                        Chapter prevChapter = chapterMap.getOrDefault(volChList.get(i - 1).getValue(), null);
+//                        if (prevChapter != null && (currentChapter.getPrevChapter() == null ||
+//                                !currentChapter.getPrevChapter().getChapterId().equals(prevChapter.getChapterId()))) {
+//                            currentChapter.setPrevChapter(prevChapter);
+//                            prevChapter.setNextChapter(currentChapter);
+//                            chaptersToSave.add(prevChapter);
+//                        }
+//                    }
+//
+//                    if (i != volChList.size() - 1) {
+//                        Chapter nextChapter = chapterMap.getOrDefault(volChList.get(i + 1).getValue(), getNewChapter(manga, volChList.get(i + 1)));
+//                        if (nextChapter != null && (currentChapter.getNextChapter() == null ||
+//                                !currentChapter.getNextChapter().getChapterId().equals(nextChapter.getChapterId()))) {
+//                            currentChapter.setNextChapter(nextChapter);
+//                            nextChapter.setPrevChapter(currentChapter);
+//                            chaptersToSave.add(nextChapter);
+//                            chapterMap.putIfAbsent(volChList.get(i + 1).getValue(), nextChapter);
+//                        }
+//                    }
+//
+//                    chaptersToSave.add(currentChapter);
+//                }
+//            }
+//            mangaChapterRepository.saveAllChapters(chaptersToSave);
+            for (ChapterDto dto : chapterDtoList) {
+                if (dto.getNextChapterId() != null) {
+                    Chapter nextChapter = chapterMap.get(dto.getNextChapterId());
+                    chapterMap.get(dto.getChapterId()).setNextChapter(nextChapter);
+                }
+                if (dto.getPrevChapterId() != null) {
+                    Chapter prevChapter = chapterMap.get(dto.getPrevChapterId());
+                    chapterMap.get(dto.getChapterId()).setPrevChapter(prevChapter);
+                }
+//                if (dto.getMangaDataBaseId() == null) {
+//                    mangaChapterRepository.setMangaDatabaseIdAndType(manga.getId(), manga.getType(), dto.getId());
+//                }
+            }
             for (int i = 0; i < volChList.size(); i++) {
-                if (!chapterMap.containsKey(volChList.get(i).getValue())) {
-                    Chapter currentChapter = mangaChapterRepository.findByChapterId(volChList.get(i).getValue());
+                if (!chapterMap.containsKey(volChList.get(i).getValue())
+                        || chapterMap.get(volChList.get(i).getValue()).getNextChapter() == null
+                        || chapterMap.get(volChList.get(i).getValue()).getPrevChapter() == null) {
+                    //Chapter currentChapter = mangaChapterRepository.findByChapterId(volChList.get(i).getValue());
+                    Chapter currentChapter = mangaUtil.getChapterByDto(mangaChapterRepository.findChapterDtoByChapterId(volChList.get(i).getValue()));
+
                     if (currentChapter == null) {
                         currentChapter = getNewChapter(manga, volChList.get(i));
                         mangaChapterRepository.save(currentChapter);
@@ -420,19 +607,26 @@ public class MangaDexService implements MangaServiceInterface<MangaDataMangaDex,
                         }
                     }
                     if (i != volChList.size() - 1 && (currentChapter.getNextChapter() == null || !currentChapter.getNextChapter().getChapterId().equals(volChList.get(i + 1).getValue()))) {
-                        Chapter nextChapter = mangaChapterRepository.findByChapterId(volChList.get(i + 1).getValue());
+                        //Chapter nextChapter = mangaChapterRepository.findByChapterId(volChList.get(i + 1).getValue());
+                        Chapter nextChapter = mangaUtil.getChapterByDto(mangaChapterRepository.findChapterDtoByChapterId(volChList.get(i + 1).getValue()));
                         if (nextChapter == null) {
                             nextChapter = getNewChapter(manga, volChList.get(i + 1));
                         }
                         nextChapter.setChapterId(volChList.get(i + 1).getValue());
-                        try {
-                            nextChapter.setNextChapter(mangaChapterRepository.findByChapterId(volChList.get(i + 2).getValue()));
-                        } catch (IndexOutOfBoundsException e) {
-                            nextChapter.setNextChapter(null);
-                        }
-                        nextChapter.setPrevChapter(currentChapter);
                         mangaChapterRepository.save(nextChapter);
+
+                        try {
+                            mangaChapterRepository.setNextChapter(mangaUtil.getChapterByDto(mangaChapterRepository.findChapterDtoByChapterId(volChList.get(i + 2).getValue())).getChapterId(), nextChapter.getId());
+                        } catch (IndexOutOfBoundsException | NullPointerException e) {
+                            mangaChapterRepository.setNextChapter(null, nextChapter.getId());
+                        }
+
+                        mangaChapterRepository.setPrevChapter(currentChapter.getChapterId(), nextChapter.getId());
                         mangaChapterRepository.setNextChapter(nextChapter.getChapterId(), currentChapter.getId());
+
+//                        nextChapter.setPrevChapter(currentChapter);
+//                        mangaChapterRepository.save(nextChapter);
+//                        mangaChapterRepository.setNextChapter(nextChapter.getChapterId(), currentChapter.getId());
 
                         try {
                             mangaChapterRepository.setPrevChapterByChapterId(nextChapter.getChapterId(), volChList.get(i + 2).getValue());
@@ -441,259 +635,73 @@ public class MangaDexService implements MangaServiceInterface<MangaDataMangaDex,
                         }
                     }
                 }
+
             }
         }
-        return mangaChapterRepository.getChaptersInOrder(manga.getMangaId(), "mangadex.org", manga.getLanguageCode());
+        List<ChapterDto> chapters = mangaChapterRepository.findAllByMangaIdAndCatalogNameAndLanguageCode(manga.getMangaId(), mangaDex, manga.getLanguageCode());
+        Map<String, Chapter> chapterMapResult = chapters.stream()
+                .collect(Collectors.toMap(ChapterDto::getChapterId, chapterDto -> mangaUtil.convertToChapter(chapterDto)));
+        Collections.reverse(volChList);
+
+        List<Chapter> chaptersResult = new ArrayList<>();
+        for (ChapterDto dto : chapters) {
+            if (dto.getNextChapterId() != null) {
+                Chapter nextChapter = chapterMapResult.get(dto.getNextChapterId());
+                chapterMapResult.get(dto.getChapterId()).setNextChapter(nextChapter);
+            }
+            if (dto.getPrevChapterId() != null) {
+                Chapter prevChapter = chapterMapResult.get(dto.getPrevChapterId());
+                chapterMapResult.get(dto.getChapterId()).setPrevChapter(prevChapter);
+            }
+            chaptersResult.add(chapterMapResult.get(dto.getChapterId()));
+        }
+        return mangaUtil.getChaptersInOrder(chaptersResult);
+        //return mangaChapterRepository.getChaptersInOrderWithLanguageCode(manga.getMangaId(), mangaDex, manga.getLanguageCode());
     }
 
-    public Chapter getNewChapter(Manga manga, Map.Entry<String, String> stringEntry) {
-        return new Chapter("mangadex.org", manga.getMangaId(), stringEntry.getValue(),
+    private Chapter getNewChapter(Manga manga, Map.Entry<String, String> stringEntry) {
+        return new Chapter(mangaDex, manga.getMangaId(), stringEntry.getValue(),
                 manga.getName(), stringEntry.getKey().split("\n")[0], stringEntry.getKey().split("\n")[1],
-                new Timestamp(System.currentTimeMillis()), manga.getFormat(), manga.getId(), manga.getLanguageCode());
+                new Timestamp(System.currentTimeMillis()), manga.getFormat(), manga.getId(), manga.getType(), manga.getLanguageCode());
     }
 
-    public List<Map.Entry<String, String>> getChaptersFromSource(String mangaId, String languageCode) {
-        try {
-            Map<String, List<String>> params = new HashMap<>();
-            params.put("translatedLanguage[]", List.of(languageCode));
-            Response response = mangaDexApiFeignClient.getChapterListAggregate(mangaId, params);
-            if (response.status() != 200) {
-                return null;
-            }
-
-            String jsonResponse = new String(response.body().asInputStream().readAllBytes(), StandardCharsets.UTF_8);
-            ChapterListAggregate chapterListAggregate = new ObjectMapper().readValue(jsonResponse, ChapterListAggregate.class);
-
-            Map<String, String> volChMap = new LinkedHashMap<>();
-            for (Volume volume : chapterListAggregate.getVolumes().values()) {
-                for (ChapterMangaDex chapterMangaDex : volume.getChapters().values()) {
-                    volChMap.put(volume.getVolume() + "\n" + chapterMangaDex.getChapter(), chapterMangaDex.getId());
-                }
-            }
-
-            return new ArrayList<>(volChMap.entrySet());
-        } catch (IOException e) {
-            log.error("getChapters ", e);
-            return null;
-        }
-    }
-
-    @Override
-    public void getChapterFromCallbackHandler(CallbackQuery callbackQuery) {
-        Long userId = callbackQuery.getFrom().getId();
-        Chapter chapter = mangaChapterRepository.findById(Long.valueOf(util.parseValue(callbackQuery.getData())[2])).orElse(null);
-
-        if (chapter == null) {
-            util.sendErrorMessage("Глава не найдена, перезапусти бот и попробуй снова. Если не получится, то обратись в поддержку.", userId);
-            return;
-        }
-
-        if (callbackQuery.getData().contains("nextChapter\n") || callbackQuery.getData().contains("prevChapter\n")) {
-            deleteKeyboard(callbackQuery.getMessage().getMessageId(), userId);
-        }
-        writeHistory(chapter, userId);
-        writeStatistic(chapter, userId);
-        getChapterHandler(chapter, userId);
-    }
-
-    @Override
-    public void getChapterFromMessageHandler(Message message) {
-        Long userId = message.getFrom().getId();
-        String chapterId = util.parseValue(message.getText())[2];
-        Chapter chapter = mangaChapterRepository.findByChapterId(chapterId);
-        writeHistory(chapter, userId);
-        writeStatistic(chapter, userId);
-        getChapterHandler(chapter, userId);
-    }
-
-    public List<String> getMangaDataChapters(String chapterId) {
+    private List<String> getUrlPageList(String chapterId) {
         try {
             ObjectMapper objectMapper = new ObjectMapper();
             objectMapper.configure(DeserializationFeature.FAIL_ON_UNKNOWN_PROPERTIES, false);
             Response response = mangaDexApiFeignClient.getChapterPageIds(chapterId);
             String jsonResponse = new String(response.body().asInputStream().readAllBytes(), StandardCharsets.UTF_8);
-
             ChapterUrlResponse chapterUrlResponse = objectMapper.readValue(jsonResponse, ChapterUrlResponse.class);
             String hash = chapterUrlResponse.getChapter().getHash();
             List<String> urlList = new ArrayList<>();
             for (String pageUrl : chapterUrlResponse.getChapter().getData()) {
                 urlList.add("https://uploads.mangadex.org/data/" + hash + "/" + pageUrl);
             }
-
             return urlList;
         } catch (IOException e) {
-            throw new RuntimeException(e);
+            e.printStackTrace();
+            return null;
         }
     }
 
     @Override
-    public MangaDataMangaDex getMangaDataChapters(String mangaId, String mangaChapterItemsId) {
-        return null;
-    }
-
-    public void getChapterHandler(Chapter chapter, Long userId) {
-        if (chapter.getFormat() != null && !chapter.getFormat().contains("Long Strip")) {
-            if (chapter.getStatus() != null && chapter.getStatus().equals("process")) {
-                waitForUploadManga(userId, chapter);
-                executorService.submit(() ->
-                        preloadMangaChapter(userId, chapter)
-                );
-                return;
-            }
-            if (chapter.getStatus() != null && chapter.getStatus().equals("finished")) {
-                executorService.submit(() ->
-                        sendCopyMessageMangaFromMangaStorage(userId, chapter)
-                );
-            } else {
-                executorService.submit(() ->
-                        sendTelegraphArticle(userId, chapter)
-                );
-            }
-            executorService.submit(() ->
-                    preloadMangaChapter(userId, chapter)
-            );
-        } else {
-            if (chapter.getStatus() != null && chapter.getStatus().equals("process")) {
-                waitForUploadManhwa(userId, chapter);
-                executorService.submit(() ->
-                        preloadManhwaChapter(userId, chapter)
-                );
-                return;
-            }
-            if (chapter.getStatus() != null && chapter.getStatus().equals("finished")) {
-                executorService.submit(() ->
-                        sendCopyMessageMangaFromMangaStorage(userId, chapter)
-                );
-            } else {
-                executorService.submit(() ->
-                        sendPDFChapter(userId, chapter)
-                );
-            }
-            executorService.submit(() ->
-                    preloadManhwaChapter(userId, chapter)
-            );
-        }
-    }
-
-    @Override
-    public void getChapterHandler(MangaDataMangaDex mangaDataMangaDex, Long userId) {
-
-    }
-
-    @Override
-    public void writeHistory(MangaDataMangaDex mangaData, Long userId) {
-
-    }
-
-    @Override
-    public void writeStatistic(MangaDataMangaDex mangaData, Long userId) {
-
-    }
-
-    public void writeHistory(Chapter chapter, Long userId) {
-        HistoryEntity historyEntity = historyEntityRepository.findByMangaIdAndUserId(chapter.getMangaId(), userId);
-        if (historyEntity == null) {
-            historyEntityRepository.save(new HistoryEntity(chapter.getMangaId(), userId, chapter.getName(), null, new Timestamp(System.currentTimeMillis()), "mangadex.org"));
-        } else {
-            historyEntity.setUpdateAt(new Timestamp(System.currentTimeMillis()));
-            historyEntityRepository.save(historyEntity);
-        }
-    }
-
-
-    public void writeStatistic(Chapter chapter, Long userId) {
-        statisticEntityRepository.save(new StatisticEntity(chapter.getMangaId(), userId, chapter.getName(), null, chapter.getVol(), chapter.getChapter(), new Timestamp(System.currentTimeMillis()), "mangadex.org"));
-    }
-
-    @Override
-    public void waitForUploadManhwa(Long userId, Long copyMessageMangaId, MangaDataDesu mangaDataDesu) {
-
-    }
-
-    public void waitForUploadManhwa(Long userId, Chapter chapter) {
-        Integer messageIdForDelete = sendWaitGIFAndAction(userId);
-        for (int i = 0; i < 60; i++) {
-            try {
-                Thread.sleep(1000);
-                if (chapter.getStatus().equals("finished")) {
-                    break;
-                }
-            } catch (InterruptedException e) {
-                throw new RuntimeException(e);
-            }
-        }
-
-        chapter = mangaChapterRepository.findById(chapter.getId()).get();
-        if (chapter.getStatus().equals("process")) {
-            mangaChapterRepository.setStatus(null, chapter.getId());
-            sendPDFChapter(userId, chapter);
-        } else if (chapter.getStatus().equals("finished")) {
-            sendCopyMessageMangaFromMangaStorage(userId, chapter);
-            telegramSender.deleteMessageById(String.valueOf(userId), messageIdForDelete);
-        }
-    }
-
-    @Override
-    public void waitForUploadManga(Long userId, Long copyMessageMangaId, MangaDataDesu mangaDataDesu) {
-
-    }
-
-    @Override
-    public void preloadMangaChapter(Long userId, MangaDataDesu mangaDataDesu) {
-
-    }
-
-    @Override
-    public void preloadManhwaChapter(MangaDataDesu mangaDataDesu, Long userId) {
-
-    }
-
-
-    public void waitForUploadManga(Long userId, Chapter chapter) {
-        for (int i = 0; i < 30; i++) {
-            try {
-                Thread.sleep(1000);
-                chapter = mangaChapterRepository.findById(chapter.getId()).get();
-                if (chapter.getStatus().equals("finished")) {
-                    break;
-                }
-            } catch (InterruptedException e) {
-                e.printStackTrace();
-                throw new RuntimeException(e);
-            }
-        }
-        chapter = mangaChapterRepository.findById(chapter.getId()).get();
-        if (chapter.getStatus().equals("process")) {
-            mangaChapterRepository.setStatus(null, chapter.getId());
-            sendTelegraphArticle(userId, chapter);
-        } else if (chapter.getStatus().equals("finished")) {
-            sendCopyMessageMangaFromMangaStorage(userId, chapter);
-        }
-    }
-
-
     public void preloadMangaChapter(Long userId, Chapter chapter) {
         try {
             Chapter nextChapter = chapter.getNextChapter();
-            if (nextChapter == null || (nextChapter.getStatus() != null && nextChapter.getStatus().equals("finished")) || (nextChapter.getStatus() != null && nextChapter.getStatus().equals("process"))) {
+            if (nextChapter == null || (nextChapter.getTelegraphStatusDownload() != null && nextChapter.getTelegraphStatusDownload().equals("finished")) || (nextChapter.getTelegraphStatusDownload() != null && nextChapter.getTelegraphStatusDownload().equals("process"))) {
                 return;
             }
 
-            List<String> urlList = getMangaDataChapters(chapter.getNextChapter().getChapterId());
+            List<String> urlList = getUrlPageList(chapter.getNextChapter().getChapterId());
             if (urlList.isEmpty()) {
                 return;
             }
             List<Node> content = new ArrayList<>();
             for (String url : urlList) {
-//                if (mangaPage.getHeight() / 3 >= mangaPage.getWidth()) {
-//                    sendPDFChapter(userId, mangaDataDesu);
-//                    return;
-//                }
-                content.add(createImage(url));
+                content.add(mangaUtil.createImage(url));
             }
 
-            nextChapter.setStatus("process");
-            mangaChapterRepository.setStatus("process", nextChapter.getId());
+            mangaChapterRepository.setTelegraphStatusDownload("process", nextChapter.getId());
 
 
             CreatePage createPage = new CreatePage(telegraphApiToken, nextChapter.getName() + " Vol " + nextChapter.getVol() + ". Chapter " + nextChapter.getChapter(), content)
@@ -726,8 +734,8 @@ public class MangaDexService implements MangaServiceInterface<MangaDataMangaDex,
                     .entities(messageEntityList).build()).getMessageId();
 
             if (messageId != null) {
-                mangaChapterRepository.setMessageId(messageId, nextChapter.getId());
-                mangaChapterRepository.setStatus("finished", nextChapter.getId());
+                mangaChapterRepository.setTelegraphMessageId(messageId, nextChapter.getId());
+                mangaChapterRepository.setTelegraphStatusDownload("finished", nextChapter.getId());
                 mangaChapterRepository.setTelegraphUrl(page.getUrl(), nextChapter.getId());
             }
         } catch (Exception e) {
@@ -736,23 +744,24 @@ public class MangaDexService implements MangaServiceInterface<MangaDataMangaDex,
     }
 
 
+    @Override
     public void preloadManhwaChapter(Long userId, Chapter chapter) {
         try {
-
             Chapter nextChapter = chapter.getNextChapter();
             if (nextChapter == null || (nextChapter.getStatus() != null && nextChapter.getStatus().equals("finished")) || (nextChapter.getStatus() != null && nextChapter.getStatus().equals("process"))) {
                 return;
             }
+            mangaChapterRepository.setPdfStatusDownload("process", nextChapter.getId());
 
             SimpleDateFormat dateFormat = new SimpleDateFormat("dd_MM_yyyy_HH_mm_ss");
-            List<String> urlList = getMangaDataChapters(nextChapter.getChapterId());
+            List<String> urlList = getUrlPageList(nextChapter.getChapterId());
 
-            if (urlList.isEmpty()) {
+            if (urlList == null || urlList.isEmpty()) {
                 return;
             }
 
             File pdfFolder = util.createStorageFolder("TempPdfStorage");
-            String pdfFileName = pdfFolder + File.separator + nextChapter.getName().replace(" ", "_") + "_Vol_" + nextChapter.getVol() + "_Chapter_" + nextChapter.getChapter() + "_From_" + userId + "_" + dateFormat.format(new Timestamp(System.currentTimeMillis())) + ".pdf";
+            String pdfFileName = pdfFolder + File.separator + nextChapter.getName().replace(" ", "_").replace(".", "_").replace("/", "_") + "_Vol_" + nextChapter.getVol().replace(".", "_") + "_Chapter_" + nextChapter.getChapter().replace(".", "_") + "_From_" + userId + "_" + dateFormat.format(new Timestamp(System.currentTimeMillis())) + ".pdf";
             PdfWriter pdfWriter = new PdfWriter(pdfFileName);
             PdfDocument pdfDoc = new PdfDocument(pdfWriter);
             Document doc = new Document(pdfDoc);
@@ -760,14 +769,15 @@ public class MangaDexService implements MangaServiceInterface<MangaDataMangaDex,
             for (int i = 0; i < urlList.size(); i++) {
                 if (urlList.get(i).endsWith(".webp") || urlList.get(i).endsWith(".WEBP")) {
                     File folder = util.createStorageFolder("TempImgStorage");
-                    File webpFile = getJpg(folder, new URL(urlList.get(i)), nextChapter.getName().replace(" ", "_") + "_Vol_" + nextChapter.getVol() + "_Chapter_" + nextChapter.getChapter() + "_Page_" + i + "_From_" + userId);
-                    ImageData imgData = ImageDataFactory.create(webpFile.getPath());
+                    File file = util.downloadFileWithoutReferrer(folder, new URL(urlList.get(i)), "temp_img" + nextChapter.getName().replace(" ", "_") + "_Vol_" + nextChapter.getVol() + "_Chapter_" + nextChapter.getChapter() + "_Page_" + urlList.get(i) + "_From_" + userId + ".webp");
+                    File jpegFile = mangaUtil.getJpeg(folder, file, nextChapter.getName().replace(" ", "_") + "_Vol_" + nextChapter.getVol() + "_Chapter_" + nextChapter.getChapter() + "_Page_" + i + "_From_" + userId);
+                    ImageData imgData = ImageDataFactory.create(jpegFile.getPath());
                     Image image = new Image(imgData);
                     PageSize pageSize = new PageSize(image.getImageWidth(), image.getImageHeight());
                     pdfDoc.addNewPage(pageSize);
                     image.setFixedPosition(pdfDoc.getNumberOfPages(), 0, 0);
                     doc.add(image);
-                    webpFile.delete();
+                    jpegFile.delete();
                 } else {
                     ImageData imgData = util.downloadImage(urlList.get(i));
                     Image image = new Image(imgData);
@@ -778,8 +788,6 @@ public class MangaDexService implements MangaServiceInterface<MangaDataMangaDex,
                 }
             }
             doc.close();
-
-
             File pdfFile = compressImages(pdfFileName, nextChapter, userId, 0.9, urlList);
 
             Integer messageId = telegramSender.sendDocument(SendDocument.builder()
@@ -789,20 +797,15 @@ public class MangaDexService implements MangaServiceInterface<MangaDataMangaDex,
             pdfFile.delete();
 
             if (messageId != null) {
-                mangaChapterRepository.setMessageId(messageId, nextChapter.getId());
-                mangaChapterRepository.setStatus("finished", nextChapter.getId());
+                mangaChapterRepository.setPdfMessageId(messageId, nextChapter.getId());
+                mangaChapterRepository.setPdfStatusDownload("finished", nextChapter.getId());
             }
         } catch (MalformedURLException | FileNotFoundException e) {
             e.printStackTrace();
         }
     }
 
-    @Override
-    public File compressImages(String pdfFileName, MangaDataDesu mangaDataDesu, Long userId, double compressParam) {
-        return null;
-    }
-
-    public File compressImages(String pdfFileName, Chapter chapter, Long userId, double compressParam, List<String> urlList) {
+    private File compressImages(String pdfFileName, Chapter chapter, Long userId, double compressParam, List<String> urlList) {
         try {
             File pdfFile = new File(pdfFileName);
             if (pdfFile.length() >= 52000000) {
@@ -813,9 +816,9 @@ public class MangaDexService implements MangaServiceInterface<MangaDataMangaDex,
                 PdfDocument pdfDoc = new PdfDocument(new PdfWriter(pdfFileName));
                 Document doc = new Document(pdfDoc);
                 for (int i = 0; i < urlList.size(); i++) {
-                    String fileName = chapter.getName().replace(" ", "_") + "_Vol_" + chapter.getVol() + "_Chapter_" + chapter.getChapter() + "_Page_" + i + "_From_" + userId;
+                    String fileName = chapter.getName().replace(" ", "_").replace("/", "_") + "_Vol_" + chapter.getVol() + "_Chapter_" + chapter.getChapter() + "_Page_" + i + "_From_" + userId;
                     File folder = util.createStorageFolder("TempImgStorage");
-                    File file = util.downloadFile(folder, new URL(urlList.get(i)), fileName);
+                    File file = util.downloadFileWithoutReferrer(folder, new URL(urlList.get(i)), fileName);
                     if (urlList.get(i).endsWith(".webp") || urlList.get(i).endsWith(".WEBP")) {
                         FFmpegStream photoStream = ffprobe.probe(file.getPath()).getStreams().get(0);
                         FFmpegBuilder builder = new FFmpegBuilder()
@@ -826,7 +829,7 @@ public class MangaDexService implements MangaServiceInterface<MangaDataMangaDex,
                                 .setVideoResolution(photoStream.width, photoStream.height)
                                 .setVideoFilter("scale=iw*" + compressParam + ":ih*" + compressParam)
                                 .done();
-                        executeBuilder(ffmpeg, ffprobe, pdfDoc, doc, fileName, file, builder, folder);
+                        mangaUtil.executeBuilder(ffmpeg, ffprobe, pdfDoc, doc, fileName, file, builder, folder);
                     } else {
                         FFmpegBuilder builder = new FFmpegBuilder()
                                 .setInput(file.getPath())
@@ -835,7 +838,7 @@ public class MangaDexService implements MangaServiceInterface<MangaDataMangaDex,
                                 .setFormat("mjpeg")
                                 .setVideoFilter("scale=iw*" + compressParam + ":ih*" + compressParam)
                                 .done();
-                        executeBuilder(ffmpeg, ffprobe, pdfDoc, doc, fileName, file, builder, folder);
+                        mangaUtil.executeBuilder(ffmpeg, ffprobe, pdfDoc, doc, fileName, file, builder, folder);
                     }
                 }
                 doc.close();
@@ -847,80 +850,25 @@ public class MangaDexService implements MangaServiceInterface<MangaDataMangaDex,
             }
             return pdfFile;
         } catch (IOException e) {
-            throw new RuntimeException(e);
-        }
-    }
-
-    @Override
-    public void executeBuilder(FFmpeg ffmpeg, FFprobe ffprobe, PdfDocument pdfDoc, Document doc, String fileName, File file, FFmpegBuilder builder, File folder) {
-        try {
-            FFmpegExecutor executor = new FFmpegExecutor(ffmpeg, ffprobe);
-            executor.createJob(builder).run();
-            ImageData imgData = ImageDataFactory.create(folder + File.separator + fileName + "output.jpeg");
-            Image image = new Image(imgData);
-            PageSize pageSize = new PageSize(image.getImageWidth(), image.getImageHeight());
-            pdfDoc.addNewPage(pageSize);
-            image.setFixedPosition(pdfDoc.getNumberOfPages(), 0, 0);
-            doc.add(image);
-            file.delete();
-            new File(folder + File.separator + fileName + "output.jpeg").delete();
-        } catch (MalformedURLException e) {
-            throw new RuntimeException(e);
-        }
-    }
-
-    @Override
-    public void sendCopyMessageMangaFromMangaStorage(Integer messageId, Long userId, MangaDataDesu mangaDataDesu) {
-
-    }
-
-
-    public void sendCopyMessageMangaFromMangaStorage(Long userId, Chapter chapter) {
-        CopyMessage copyMessage = new CopyMessage(String.valueOf(userId), "-1002092468371L", chapter.getMessageId());
-        InlineKeyboardMarkup inlineKeyboardMarkup = getPrevNextButtons(chapter, userId);
-        if (inlineKeyboardMarkup != null) {
-            copyMessage.setReplyMarkup(inlineKeyboardMarkup);
-        }
-        try {
-            telegramSender.resendCopyMessageFromStorage(copyMessage);
-        } catch (ExecutionException | InterruptedException e) {
-            mangaChapterRepository.setStatus(null, chapter.getId());
-            log.error("Copy message not send: " + chapter.getName() + " chapterId " + chapter.getChapterId() + " vol " + chapter.getVol() + " ch " + chapter.getChapter());
             e.printStackTrace();
-            sendTelegraphArticle(userId, chapter);
+            return null;
         }
     }
 
     @Override
-    public void sendTelegraphArticle(Long userId, MangaDataDesu mangaDataDesu) {
-
-    }
-
-    @Override
-    public void sendPDFChapter(Long userId, MangaDataDesu mangaDataDesu) {
-
-    }
-
-
     public void sendTelegraphArticle(Long userId, Chapter chapter) {
-        List<String> urlList = getMangaDataChapters(chapter.getChapterId());
-        if (urlList.isEmpty()) {
+        List<String> urlList = getUrlPageList(chapter.getChapterId());
+        if (urlList == null || urlList.isEmpty()) {
             util.sendErrorMessage("Данная глава доступна только на странице создателя, к сожалению это можно проверить только при ее загрузке, ссылки на все главы можно найти тут: \nhttps://mangadex.org/title/" + chapter.getMangaId() + "/", userId);
             return;
         }
         try {
             List<Node> content = new ArrayList<>();
             for (String url : urlList) {
-//                if (mangaPage.getHeight() / 3 >= mangaPage.getWidth()) {
-//                    sendPDFChapter(userId, mangaDataDesu);
-//                    return;
-//                }
-                content.add(createImage(url));
+                content.add(mangaUtil.createImage(url));
             }
 
-            chapter.setStatus("process");
-            mangaChapterRepository.setStatus("process", chapter.getId());
-
+            mangaChapterRepository.setTelegraphStatusDownload("process", chapter.getId());
 
             CreatePage createPage = new CreatePage(telegraphApiToken, chapter.getName() + " Vol " + chapter.getVol() + ". Chapter " + chapter.getChapter(), content)
                     .setAuthorName(telegraphAuthorName)
@@ -951,14 +899,12 @@ public class MangaDexService implements MangaServiceInterface<MangaDataMangaDex,
 
             InlineKeyboardMarkup inlineKeyboardMarkup = getPrevNextButtons(chapter, userId);
 
-
             Integer messageId = telegramSender.send(sendMessage).getMessageId();
 
             if (messageId != null) {
-                mangaChapterRepository.setMessageId(messageId, chapter.getId());
-                mangaChapterRepository.setStatus("finished", chapter.getId());
+                mangaChapterRepository.setTelegraphMessageId(messageId, chapter.getId());
+                mangaChapterRepository.setTelegraphStatusDownload("finished", chapter.getId());
                 mangaChapterRepository.setTelegraphUrl(page.getUrl(), chapter.getId());
-
 
                 if (inlineKeyboardMarkup != null) {
                     telegramSender.sendCopyMessageFromStorage(CopyMessage.builder()
@@ -973,24 +919,27 @@ public class MangaDexService implements MangaServiceInterface<MangaDataMangaDex,
                             .fromChatId(-1002092468371L).build());
                 }
             }
-        } catch (IOException e) {
+        } catch (Exception e) {
             e.printStackTrace();
         }
     }
 
+    @Override
     public void sendPDFChapter(Long userId, Chapter chapter) {
         try {
             SimpleDateFormat dateFormat = new SimpleDateFormat("dd_MM_yyyy_HH_mm_ss");
-            List<String> urlList = getMangaDataChapters(chapter.getChapterId());
+            List<String> urlList = getUrlPageList(chapter.getChapterId());
 
-            if (urlList.isEmpty()) {
+            if (urlList == null || urlList.isEmpty()) {
                 util.sendErrorMessage("Данная глава доступна только на странице создателя, к сожалению это можно проверить только при ее загрузке, ссылку на главы можно найти тут: \nhttps://mangadex.org/title/" + chapter.getMangaId() + "/", userId);
                 return;
             }
+            mangaChapterRepository.setPdfStatusDownload("process", chapter.getId());
 
             File pdfFolder = util.createStorageFolder("TempPdfStorage");
-            Integer messageIdForDelete = sendWaitGIFAndAction(userId);
-            String pdfFileName = pdfFolder + File.separator + chapter.getName().replace(" ", "_") + "_Vol_" + chapter.getVol() + "_Chapter_" + chapter.getChapter() + "_From_" + userId + "_" + dateFormat.format(new Timestamp(System.currentTimeMillis())) + ".pdf";
+
+            Integer messageIdForDelete = mangaUtil.sendWaitGIFAndAction(userId);
+            String pdfFileName = pdfFolder + File.separator + chapter.getName().replace(" ", "_").replace(".", "_").replace("/", "_") + "_Vol_" + chapter.getVol().replace(".", "_") + "_Chapter_" + chapter.getChapter().replace(".", "_") + "_From_" + userId + "_" + dateFormat.format(new Timestamp(System.currentTimeMillis())) + ".pdf";
             PdfWriter pdfWriter = new PdfWriter(pdfFileName);
             PdfDocument pdfDoc = new PdfDocument(pdfWriter);
             Document doc = new Document(pdfDoc);
@@ -998,14 +947,16 @@ public class MangaDexService implements MangaServiceInterface<MangaDataMangaDex,
             for (int i = 0; i < urlList.size(); i++) {
                 if (urlList.get(i).endsWith(".webp") || urlList.get(i).endsWith(".WEBP")) {
                     File folder = util.createStorageFolder("TempImgStorage");
-                    File webpFile = getJpg(folder, new URL(urlList.get(i)), chapter.getName().replace(" ", "_") + "_Vol_" + chapter.getVol() + "_Chapter_" + chapter.getChapter() + "_Page_" + i + "_From_" + userId);
-                    ImageData imgData = ImageDataFactory.create(webpFile.getPath());
+
+                    File file = util.downloadFileWithoutReferrer(folder, new URL(urlList.get(i)), "temp_img" + chapter.getName().replace(" ", "_").replace("/", "_") + "_Vol_" + chapter.getVol() + "_Chapter_" + chapter.getChapter() + "_Page_" + urlList.get(i) + "_From_" + userId + ".webp");
+                    File jpegFile = mangaUtil.getJpeg(folder, file, chapter.getName().replace(" ", "_").replace("/", "_") + "_Vol_" + chapter.getVol() + "_Chapter_" + chapter.getChapter() + "_Page_" + i + "_From_" + userId);
+                    ImageData imgData = ImageDataFactory.create(jpegFile.getPath());
                     Image image = new Image(imgData);
                     PageSize pageSize = new PageSize(image.getImageWidth(), image.getImageHeight());
                     pdfDoc.addNewPage(pageSize);
                     image.setFixedPosition(pdfDoc.getNumberOfPages(), 0, 0);
                     doc.add(image);
-                    webpFile.delete();
+                    jpegFile.delete();
                 } else {
                     ImageData imgData = util.downloadImage(urlList.get(i));
                     Image image = new Image(imgData);
@@ -1024,8 +975,8 @@ public class MangaDexService implements MangaServiceInterface<MangaDataMangaDex,
             Integer messageId = telegramSender.sendDocument(sendDocument).getMessageId();
 
             if (messageId != null) {
-                mangaChapterRepository.setMessageId(messageId, chapter.getId());
-                mangaChapterRepository.setStatus("finished", chapter.getId());
+                mangaChapterRepository.setPdfMessageId(messageId, chapter.getId());
+                mangaChapterRepository.setPdfStatusDownload("finished", chapter.getId());
 
                 if (inlineKeyboardMarkup != null) {
                     telegramSender.sendCopyMessageFromStorage(CopyMessage.builder()
@@ -1039,8 +990,8 @@ public class MangaDexService implements MangaServiceInterface<MangaDataMangaDex,
                             .chatId(userId)
                             .fromChatId(-1002092468371L).build());
                 }
-                pdfFile.delete();
             }
+            pdfFile.delete();
 
             telegramSender.deleteMessageById(String.valueOf(userId), messageIdForDelete);
         } catch (Exception e) {
@@ -1049,262 +1000,71 @@ public class MangaDexService implements MangaServiceInterface<MangaDataMangaDex,
     }
 
     @Override
-    public File getJpg(File folder, URL imgUrl, String fileName) {
-        try {
-            FFmpeg ffmpeg = new FFmpeg();
-            FFprobe ffprobe = new FFprobe();
-            File file = util.downloadFile(folder, imgUrl, "temp_img" + fileName + ".webp");
-            FFmpegStream photoStream = ffprobe.probe(file.getPath()).getStreams().get(0);
-            FFmpegBuilder builder = new FFmpegBuilder()
-                    .setInput(file.getPath())
-                    .overrideOutputFiles(true)
-                    .addOutput(new java.io.File(folder + File.separator + "output_img" + fileName + ".jpeg").getPath())
-                    .setVideoCodec("mjpeg")
-                    .setVideoResolution(photoStream.width, photoStream.height)
-                    .done();
-            FFmpegExecutor executor = new FFmpegExecutor(ffmpeg);
-            executor.createJob(builder).run();
-            file.delete();
-            return new File(folder + File.separator + "output_img" + fileName + ".jpeg");
-        } catch (Exception e) {
-            throw new RuntimeException(e);
-        }
-    }
-
-    @Override
-    public InlineKeyboardMarkup getPrevNextButtons(MangaDataDesu mangaDataDesu) {
-        return null;
-    }
-
-
     public InlineKeyboardMarkup getPrevNextButtons(Chapter chapter, Long userId) {
         InlineKeyboardMarkup inlineKeyboardMarkup;
-
-        String readStatus;
-        if (readStatusRepository.findByMangaIdAndChapterIdAndUserIdAndCatalogName(chapter.getMangaId(), chapter.getChapterId(), userId, "mangadex.org") != null) {
-            readStatus = "✅";
-        } else {
-            readStatus = "\uD83D\uDCD5";
-        }
-
+        //String readStatus = readStatusRepository.findByMangaIdAndChapterIdAndUserIdAndCatalogName(chapter.getMangaId(), chapter.getChapterId(), userId, mangaDex) != null ? "✅" : "\uD83D\uDCD5";
+        String readStatus = readStatusRepository.existsByMangaIdAndChapterIdAndUserIdAndCatalogName(chapter.getMangaId(), chapter.getChapterId(), userId, mangaDex) ? "✅" : "\uD83D\uDCD5";
 
         if (chapter.getPrevChapter() == null && chapter.getNextChapter() == null) {
             inlineKeyboardMarkup = null;
         } else if (chapter.getPrevChapter() == null) {
             inlineKeyboardMarkup = new InlineKeyboardMarkup(new ArrayList<>(List.of(
-                    new InlineKeyboardRow(InlineKeyboardButton.builder().text(EmojiParser.parseToUnicode("Список глав")).switchInlineQueryCurrentChat("mangadex.org" + "\nmangaId:\n" + chapter.getMangaId() + "\n" + chapter.getLanguageCode()).build()),
-                    new InlineKeyboardRow(InlineKeyboardButton.builder().text(EmojiParser.parseToUnicode(readStatus)).callbackData("mangadex.org" + "\nreadStatus\n" + chapter.getId()).build(),
-                            InlineKeyboardButton.builder().text(EmojiParser.parseToUnicode("Следующая глава")).callbackData("mangadex.org" + "\nnextChapter\n" + chapter.getNextChapter().getId()).build())
+                    new InlineKeyboardRow(InlineKeyboardButton.builder().text(EmojiParser.parseToUnicode("Список глав")).switchInlineQueryCurrentChat(mangaDex + "\nmangaId:\n" + chapter.getMangaId() + "\n" + chapter.getLanguageCode()).build()),
+                    new InlineKeyboardRow(InlineKeyboardButton.builder().text(EmojiParser.parseToUnicode(readStatus)).callbackData(mangaDex + "\nreadStatus\n" + chapter.getId()).build(),
+                            InlineKeyboardButton.builder().text(EmojiParser.parseToUnicode("Следующая глава")).callbackData(mangaDex + "\nnextChapter\n" + chapter.getNextChapter().getId()).build())
             )));
         } else if (chapter.getNextChapter() == null) {
             inlineKeyboardMarkup = new InlineKeyboardMarkup(new ArrayList<>(List.of(
-                    new InlineKeyboardRow(InlineKeyboardButton.builder().text(EmojiParser.parseToUnicode("Список глав")).switchInlineQueryCurrentChat("mangadex.org" + "\nmangaId:\n" + chapter.getMangaId() + "\n" + chapter.getLanguageCode()).build()),
-                    new InlineKeyboardRow(InlineKeyboardButton.builder().text(EmojiParser.parseToUnicode("Предыдущая глава")).callbackData("mangadex.org" + "\nprevChapter\n" + chapter.getPrevChapter().getId()).build(),
-                            InlineKeyboardButton.builder().text(EmojiParser.parseToUnicode(readStatus)).callbackData("mangadex.org" + "\nreadStatus\n" + chapter.getId()).build())
+                    new InlineKeyboardRow(InlineKeyboardButton.builder().text(EmojiParser.parseToUnicode("Список глав")).switchInlineQueryCurrentChat(mangaDex + "\nmangaId:\n" + chapter.getMangaId() + "\n" + chapter.getLanguageCode()).build()),
+                    new InlineKeyboardRow(InlineKeyboardButton.builder().text(EmojiParser.parseToUnicode("Предыдущая глава")).callbackData(mangaDex + "\nprevChapter\n" + chapter.getPrevChapter().getId()).build(),
+                            InlineKeyboardButton.builder().text(EmojiParser.parseToUnicode(readStatus)).callbackData(mangaDex + "\nreadStatus\n" + chapter.getId()).build())
             )));
         } else {
             inlineKeyboardMarkup = new InlineKeyboardMarkup(new ArrayList<>(List.of(
-                    new InlineKeyboardRow(InlineKeyboardButton.builder().text(EmojiParser.parseToUnicode("Список глав")).switchInlineQueryCurrentChat("mangadex.org" + "\nmangaId:\n" + chapter.getMangaId() + "\n" + chapter.getLanguageCode()).build()),
-                    new InlineKeyboardRow(InlineKeyboardButton.builder().text(EmojiParser.parseToUnicode("Назад")).callbackData("mangadex.org" + "\nprevChapter\n" + chapter.getPrevChapter().getId()).build(),
-                            InlineKeyboardButton.builder().text(EmojiParser.parseToUnicode(readStatus)).callbackData("mangadex.org" + "\nreadStatus\n" + chapter.getId()).build(),
-                            InlineKeyboardButton.builder().text(EmojiParser.parseToUnicode("Дальше")).callbackData("mangadex.org" + "\nnextChapter\n" + chapter.getNextChapter().getId()).build())
+                    new InlineKeyboardRow(InlineKeyboardButton.builder().text(EmojiParser.parseToUnicode("Список глав")).switchInlineQueryCurrentChat(mangaDex + "\nmangaId:\n" + chapter.getMangaId() + "\n" + chapter.getLanguageCode()).build()),
+                    new InlineKeyboardRow(InlineKeyboardButton.builder().text(EmojiParser.parseToUnicode("Назад")).callbackData(mangaDex + "\nprevChapter\n" + chapter.getPrevChapter().getId()).build(),
+                            InlineKeyboardButton.builder().text(EmojiParser.parseToUnicode(readStatus)).callbackData(mangaDex + "\nreadStatus\n" + chapter.getId()).build(),
+                            InlineKeyboardButton.builder().text(EmojiParser.parseToUnicode("Дальше")).callbackData(mangaDex + "\nnextChapter\n" + chapter.getNextChapter().getId()).build())
             )));
         }
         return inlineKeyboardMarkup;
     }
 
     @Override
-    public void clickReadStatus(CallbackQuery callbackQuery) {
-        Long userId = callbackQuery.getFrom().getId();
-        Chapter chapter = mangaChapterRepository.findById(Long.valueOf(util.parseValue(callbackQuery.getData())[2])).orElseThrow();
-        ReadStatus readStatus = readStatusRepository.findByMangaIdAndChapterIdAndUserIdAndCatalogName(chapter.getMangaId(), chapter.getChapterId(), userId, "mangadex.org");
-
-        if (readStatus == null) {
-            readStatusRepository.save(new ReadStatus(chapter.getMangaId(), chapter.getChapterId(), userId, new Timestamp(System.currentTimeMillis()), "mangadex.org"));
-            telegramSender.sendAnswerCallbackQuery(AnswerCallbackQuery.builder()
-                    .callbackQueryId(callbackQuery.getId())
-                    .text("Главу отмечено как \"Прочитано\"")
-                    .showAlert(false).build());
-        } else {
-            readStatusRepository.delete(readStatus);
-        }
-
-        telegramSender.sendEditMessageReplyMarkup(EditMessageReplyMarkup.builder()
-                .replyMarkup(getPrevNextButtons(chapter, userId))
-                .messageId(callbackQuery.getMessage().getMessageId())
-                .chatId(userId).build());
-    }
-
-    @Override
-    public Node createImage(String imageUrl) {
-        NodeElement image = new NodeElement();
-        image.setTag("img");
-        image.setAttrs(new HashMap<>());
-        image.getAttrs().put("src", imageUrl);
-        return image;
-    }
-
-    @Override
-    public Integer sendWaitGIFAndAction(Long userId) {
-        return null;
-    }
-
-    @Override
-    public void deleteKeyboard(Integer messageId, Long userId) {
-        telegramSender.sendEditMessageReplyMarkup(EditMessageReplyMarkup.builder()
-                .replyMarkup(new InlineKeyboardMarkup(new ArrayList<>()))
-                .messageId(messageId)
-                .chatId(userId).build());
-    }
-
-    @Override
     public void getRandomManga(Long userId) {
-
         util.sendInfoMessage("К сожалению, для этого каталога случайная манга недоступна, я как можно скорее постараюсь заменить этот пункт на что-то другое, спасибо за понимание.", userId);
-
-
-//        try {
-//            Map<String, List<String>> searchParams = new HashMap<>();
-//            searchParams.put("contentRating[]", List.of("safe", "suggestive", "erotica", "pornographic"));
-//            //searchParams.put("availableTranslatedLanguage[]", List.of("en"));
-//            //searchParams.put("hasAvailableChapters", Collections.singletonList("true"));
-//
-//            ObjectMapper objectMapper = new ObjectMapper();
-//            Response response = mangaDexApiFeignClient.getRandomManga(searchParams);
-//            String jsonResponse = new String(response.body().asInputStream().readAllBytes(), StandardCharsets.UTF_8);
-//            MangaResponse mangaResponse = objectMapper.readValue(jsonResponse, MangaResponse.class);
-//
-//            String mangaId = mangaResponse.getData().getId();
-//            sendMangaById(userId, mangaId);
-//        } catch (IOException e) {
-//            throw new RuntimeException(e);
-//        }
     }
 
-    @Override
-    public void clickChangeMangaStatus(CallbackQuery callbackQuery) {
-        String mangaDatabaseId = util.parseValue(callbackQuery.getData())[2];
-        Long userId = callbackQuery.getFrom().getId();
-        MangaStatusParameter mangaStatusParameter = mangaStatusParameterRepository.findByMangaDatabaseIdAndUserId(Long.valueOf(mangaDatabaseId), userId);
+    public void sendNotificationAboutNewChapter() {
+        Map<NotificationEntity, List<Long>> prepareSendList = notificationEntityRepository.findAllByCatalogName(mangaDex).stream()
+                .collect(Collectors.groupingBy(
+                        Function.identity(),
+                        Collectors.mapping(NotificationEntity::getUserId, Collectors.toList())
+                ));
+        for (NotificationEntity notificationEntity : prepareSendList.keySet()) {
+            Manga manga = mangaRepository.findById(notificationEntity.getMangaDatabaseId()).orElseThrow();
+            List<Map.Entry<String, String>> chapters = getChaptersFromSource(notificationEntity.getMangaId(), manga.getLanguageCode());
+            if (chapters == null) {
+                log.error("Возникла ошибка при получении глав сайта mangaDex.org, id манги: " + notificationEntity.getMangaId());
+                continue;
+            }
+            MangaDataMangaDex mangaData = getMangaData(notificationEntity.getMangaId());
+            if (mangaData == null) {
+                log.error("Возникла ошибка при получении MangaData сайта mangaDex.org, id манги: " + notificationEntity.getMangaId());
+                continue;
+            }
 
-        String read = "Читаю";
-        String planned = "В планах";
-        String finished = "Прочитано";
-        String postponed = "Отложено";
-
-        if (mangaStatusParameter != null && !mangaStatusParameter.getStatus().isEmpty()) {
-            if (mangaStatusParameter.getStatus().equals("read")) {
-                read = read + " :white_check_mark:";
-            } else if (mangaStatusParameter.getStatus().equals("planned")) {
-                planned = planned + " :white_check_mark:";
-            } else if (mangaStatusParameter.getStatus().equals("finished")) {
-                finished = finished + " :white_check_mark:";
-            } else if (mangaStatusParameter.getStatus().equals("postponed")) {
-                postponed = postponed + " :white_check_mark:";
+            String lastChapter = util.parseValue(chapters.get(0).getKey())[1];
+            NotificationChapterMapping chapterMapping = notificationChapterMappingRepository.findByMangaDatabaseId(manga.getId());
+            if (chapterMapping != null && !chapterMapping.getChapter().equals(lastChapter)) {
+                notificationChapterMappingRepository.setChapter(lastChapter, manga.getId());
+                senderService.sendNotificationToUsers(prepareSendList.get(notificationEntity), manga, lastChapter);
             }
         }
-
-        telegramSender.sendEditMessageReplyMarkup(EditMessageReplyMarkup.builder()
-                .messageId(callbackQuery.getMessage().getMessageId())
-                .chatId(userId)
-                .replyMarkup(getKeyboardForChangeStatus(read, planned, finished, postponed, mangaDatabaseId)).build());
     }
 
-    @Override
-    public void clickMangaStatus(CallbackQuery callbackQuery) {
-        String mangaDatabaseId = util.parseValue(callbackQuery.getData())[2];
-        Long userId = callbackQuery.getFrom().getId();
-        String parameter = util.parseValue(callbackQuery.getData())[3];
 
-        Manga manga = mangaRepository.findById(Long.valueOf(mangaDatabaseId)).orElseThrow();
-
-        String read = "Читаю";
-        String planned = "В планах";
-        String finished = "Прочитано";
-        String postponed = "Отложено";
-
-        MangaStatusParameter mangaStatusParameter = mangaStatusParameterRepository.findByMangaIdAndUserId(manga.getMangaId(), userId);
-
-        if (mangaStatusParameter == null) {
-            mangaStatusParameter = new MangaStatusParameter(manga.getMangaId(), Long.valueOf(mangaDatabaseId), userId, parameter, manga.getName(), null, new Timestamp(System.currentTimeMillis()), "mangadex.org");
-
-            switch (parameter) {
-                case "read" -> read = read + " :white_check_mark:";
-                case "planned" -> planned = planned + " :white_check_mark:";
-                case "finished" -> finished = finished + " :white_check_mark:";
-                case "postponed" -> postponed = postponed + " :white_check_mark:";
-            }
-        } else {
-            switch (parameter) {
-                case "read" -> {
-                    if (mangaStatusParameter.getStatus().equals("read")) {
-                        mangaStatusParameter.setStatus("none");
-                    } else {
-                        mangaStatusParameter.setStatus("read");
-                        read = read + " :white_check_mark:";
-                    }
-                }
-                case "planned" -> {
-                    if (mangaStatusParameter.getStatus().equals("planned")) {
-                        mangaStatusParameter.setStatus("none");
-                    } else {
-                        mangaStatusParameter.setStatus("planned");
-                        planned = planned + " :white_check_mark:";
-                    }
-                }
-                case "finished" -> {
-                    if (mangaStatusParameter.getStatus().equals("finished")) {
-                        mangaStatusParameter.setStatus("none");
-                    } else {
-                        mangaStatusParameter.setStatus("finished");
-                        finished = finished + " :white_check_mark:";
-                    }
-                }
-                case "postponed" -> {
-                    if (mangaStatusParameter.getStatus().equals("postponed")) {
-                        mangaStatusParameter.setStatus("none");
-                    } else {
-                        mangaStatusParameter.setStatus("postponed");
-                        postponed = postponed + " :white_check_mark:";
-                    }
-                }
-            }
-        }
-
-        mangaStatusParameterRepository.save(mangaStatusParameter);
-        telegramSender.sendEditMessageReplyMarkup(EditMessageReplyMarkup.builder()
-                .messageId(callbackQuery.getMessage().getMessageId())
-                .chatId(userId)
-                .replyMarkup(getKeyboardForChangeStatus(read, planned, finished, postponed, mangaDatabaseId)).build());
-    }
-
-    @Override
-    public InlineKeyboardMarkup getKeyboardForChangeStatus(String read, String planned, String finished, String postponed, String mangaDatabaseId) {
-        return new InlineKeyboardMarkup(new ArrayList<>(List.of(
-                new InlineKeyboardRow(InlineKeyboardButton.builder().text(EmojiParser.parseToUnicode(read)).callbackData("mangadex.org" + "\nchangeMangaStatusRead\n" + mangaDatabaseId + "\nread").build(),
-                        InlineKeyboardButton.builder().text(EmojiParser.parseToUnicode(planned)).callbackData("mangadex.org" + "\nchangeMangaStatusPlanned\n" + mangaDatabaseId + "\nplanned").build()),
-                new InlineKeyboardRow(InlineKeyboardButton.builder().text(EmojiParser.parseToUnicode(finished)).callbackData("mangadex.org" + "\nchangeMangaStatusFinished\n" + mangaDatabaseId + "\nfinished").build(),
-                        InlineKeyboardButton.builder().text(EmojiParser.parseToUnicode(postponed)).callbackData("mangadex.org" + "\nchangeMangaStatusPostponed\n" + mangaDatabaseId + "\npostponed").build()),
-                new InlineKeyboardRow(InlineKeyboardButton.builder().text(EmojiParser.parseToUnicode("Назад")).callbackData("mangadex.org" + "\nclickBackManga\n" + mangaDatabaseId).build())
-        )));
-    }
-
-    @Override
-    public InlineKeyboardMarkup getKeyboardForChangeStatusViaProfile(String read, String planned, String finished, String postponed, String mangaId, String viaProfile) {
-        return null;
-    }
-
-    @Override
-    public void clickBackManga(CallbackQuery callbackQuery) {
-        Long mangaDatabaseId = Long.valueOf(util.parseValue(callbackQuery.getData())[2]);
-        Manga manga = mangaRepository.findById(mangaDatabaseId).orElseThrow();
-        telegramSender.sendEditMessageReplyMarkup(EditMessageReplyMarkup.builder()
-                .replyMarkup(getMangaButtons(callbackQuery.getFrom().getId(), manga.getMangaId(), mangaDatabaseId, manga.getLanguageCode()))
-                .messageId(callbackQuery.getMessage().getMessageId())
-                .chatId(callbackQuery.getFrom().getId()).build());
-    }
-
-    public String getYear(int year) {
+    private String getYear(int year) {
         if (year != 0) {
             return "Год: " + year;
         } else {
@@ -1326,7 +1086,7 @@ public class MangaDexService implements MangaServiceInterface<MangaDataMangaDex,
         return titleMap.getOrDefault(languageCodeForCatalog, titleMap.getOrDefault("en", titleMap.getOrDefault("ja", titleMap.values().iterator().next())));
     }
 
-    public String getCoverMangaDex(List<MangaRelationship> relationships, String mangaId, String pix) {
+    private String getCoverMangaDex(List<MangaRelationship> relationships, String mangaId, String pix) {
         MangaRelationship coverArtRelationship = relationships.stream()
                 .filter(relationship -> "cover_art".equals(relationship.getType()))
                 .findFirst().get();
@@ -1334,7 +1094,7 @@ public class MangaDexService implements MangaServiceInterface<MangaDataMangaDex,
 
     }
 
-    public String getGenres(List<MangaTag> tags, String languageCode) {
+    private String getGenres(List<MangaTag> tags, String languageCode) {
         StringBuilder stringBuilder = new StringBuilder();
         for (MangaTag mangaTag : tags) {
             if (mangaTag.getAttributes().getGroup().equals("genre")) {
@@ -1344,7 +1104,7 @@ public class MangaDexService implements MangaServiceInterface<MangaDataMangaDex,
         return stringBuilder.toString();
     }
 
-    public String getFormat(List<MangaTag> tags, String languageCode) {
+    private String getFormat(List<MangaTag> tags, String languageCode) {
         if (tags.isEmpty()) {
             return " ";
         }
